[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usepolvo"
version = "0.1.18"
description = "A comprehensive integration package supporting various services."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "asyncio==3.4.3",
    "cachetools==5.4.0",
    "fastapi==0.111.1",
    "loguru==0.7.2",
    "pydantic-settings==2.3.4",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "ratelimit==2.2.1",
    "requests==2.32.3",
    "retry==0.9.2",
    "stripe==10.5.0",
    "uvicorn==0.30.3",
]
[[project.authors]]
name = "Caio Pizzol"
email = "caio@usepolvo.com"

[project.license]
text = "MIT"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=2 -ra"
testpaths = ["tests"]
